--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -164,6 +164,7 @@
   "dependencies": {
     "@apollo/client": "3.9.6",
     "@coinbase/wallet-sdk": "3.7.2",
+    "@divvi/referral-sdk": "1.0.0",
     "@emotion/react": "11.10.8",
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/client-preset": "^3.0.1",
